--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</nav>
 
 		<div class="header_main">
-			<h1>We are <b>Webpaint</b></h1>
+			<h1>We are <b>Webpaint</b> project</h1>
 			<p>digital & branding agency based in Jupiter and we would love to turn ideas into beautiful things.</p><br>
 			<button>
 				<h6>See Portfolio</h6>
